Attempt graceful recovery when mork corruption is detected for form autocomplete data.  Bug 253935, patch by bienvenu, r=bryner, sr=mscott